Prevent (empty) text selection on iOS long-press

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -10,6 +10,15 @@
 @import 'react-linear-gradient-picker/dist/index.css';
 @import 'react-linear-gradient-picker';
 
+.split {
+    touch-action: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+
 .link {
     text-decoration: none;
     background-color: black;
